liquid-rust-tests/tests/neg/assert_terminators/test-ignore.rs
#![feature(register_tool)]
#![register_tool(lr)]
#![feature(custom_inner_attributes)]
#![lr::assert_behavior(ignore)]

#[lr::sig(fn(x: i32, y: i32) -> i32)]
pub fn test(x: i32, y: i32) -> i32 {
    x / y //~ ERROR possible division by zero
}